nginxtest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-test
